--- a/src/client-shared/styles/layout.scss
+++ b/src/client-shared/styles/layout.scss
@@ -47,7 +47,7 @@
     flex-grow: 1;
 }
 
-$layout-margins: 2, 4, 6, 8, 12, 16;
+$layout-margins: 2, 4, 6, 8, 12, 16, 32, 48, 64;
 
 @each $margin in $layout-margins {
     .m-t-#{$margin} {
