Add bingo support

--- a/src/dashboard/styles/dashboard-common.scss
+++ b/src/dashboard/styles/dashboard-common.scss
@@ -50,6 +50,7 @@ a {
 }
 .state-background-yellow {
     background-color: dashboard-colors.$state-yellow;
+    color: #222;
 }
 .state-background-red {
     background-color: dashboard-colors.$state-red;
